# flexflow-train

./: .clang-format-for-format-sh  .editorconfig  .gitignore  .gitmodules  .proj.toml  CMakeLists.txt  CONTRIBUTING.md  README.md  contributing.dox  deploy.sh  flake.nix  index.dox  parallel_verification_test.cc  simple_pcg_test.cc  task-spec_interface.txt  test_realm_training_backing_pcg.cc
lib/realm-execution/: CMakeLists.txt  README.md  index.dox
lib/realm-execution/include/realm-execution/: address_space.h  atomic_dependency_set.h  dependency_set.h  device_specific_managed_per_device_ff_handle.dtg.toml  device_specific_managed_per_device_ff_handle.h  device_specific_ptr.h  distributed_device_handle.h  distributed_device_state_initialization.h  distributed_ff_handle.h  distributed_per_device_op_state_initialization.h  dynamic_tensor_accessor_from_instance.h  external_tensor_binding.h  external_tensor_handle.h  instance_allocation.h  parallel_loss_config.dtg.toml  pcg_instance.h  per_device_op_state_backing.dtg.toml  processor_kind.h  processor_query.h  realm.h  realm_allocator.h  realm_context.h  realm_manager.h  realm_task_id_t.h  realm_task_registry.h  sum_reduction.h  task_id_t.h  tensor_instance_backing.dtg.toml  tensor_instance_backing.h
lib/realm-execution/src/realm-execution/: address_space.cc  atomic_dependency_set.cc  dependency_set.cc  device_specific_managed_per_device_ff_handle.cc  device_specific_ptr.cc  distributed_device_handle.cc  (+18 more)
lib/realm-execution/test/: CMakeLists.txt
lib/utils/: CMakeLists.txt  index.dox
lib/utils/test/: CMakeLists.txt
(+3752 files in other folders)
