ff_add_library(
  NAME
    utils
  SRC_PATTERNS
    src/*.cc
  PUBLIC_INCLUDE
    include/
  PRIVATE_INCLUDE
    src/
  DEPS
    deps::expected
    deps::fmt
    deps::json
    CUDA::cudart
    deps::rapidcheck
    deps::libassert
)

add_subdirectory(ffi)
add_subdirectory(test)
add_subdirectory(benchmark)
